--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@types/node": "^18.15.12",
     "@nuxt/content": "^2.6.0",
-    "nuxt": "^3.5.2"
+    "@types/node": "^18.15.12",
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.5.2",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
