--- a/package.json
+++ b/package.json
@@ -4,14 +4,27 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "storybook": "storybook dev -p 6006 -s ./assets",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
+    "@storybook/addon-essentials": "^7.0.22",
+    "@storybook/addon-interactions": "^7.0.22",
+    "@storybook/addon-links": "^7.0.22",
+    "@storybook/blocks": "^7.0.22",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/vue3": "^7.0.22",
+    "@storybook/vue3-vite": "^7.0.22",
     "@types/node": "^18.15.12",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.5.2",
     "postcss": "^8.4.24",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.22",
+    "storybook-addon-nuxt": "^1.3.3",
     "tailwindcss": "^3.3.2"
   }
 }
